--- a/res/css/structures/_ThreadsActivityCentre.pcss
+++ b/res/css/structures/_ThreadsActivityCentre.pcss
@@ -24,7 +24,7 @@
     align-items: center;
     justify-content: center;
     border-radius: 8px;
-    margin: auto;
+    margin: 18px auto auto auto;
 
     &.expanded {
         /* align with settings icon */
